fixing alignment nav

--- a/styles/style.css
+++ b/styles/style.css
@@ -88,7 +88,7 @@ h3 {
 
 header nav ul {
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   gap: var(--sp-s);
   list-style: none;
 }
